<resources>
    <string name="app_name">CodigoCodeTest</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>

    //content description
    <string name="movie_image">Movie Image</string>
    <string name="movie_cover_image">Movie Cover Image</string>
    <string name="rating_star_image">Rating Star Image</string>
    <string name="overview">Overview</string>
    <string name="language">Language</string>
    <string name="divider">:</string>
    <string name="subtitle">Subtitle</string>
    <string name="description">Description</string>
    <string name="starring">Starring</string>
    <string name="status">Status</string>
    <string name="tagline">Tagline</string>
</resources>